--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
