--- a/style.css
+++ b/style.css
@@ -75,6 +75,16 @@ body {
   background: #181818;
 }
 .section:nth-child(10) {
+  background: #181818;
+}
+.section:nth-child(11) {
+  background: #f8f3d9;
+  color: #272722;
+  position: relative;
+  padding: 30px;
+  overflow: hidden;
+}
+.section:nth-child(12) {
   background: #f8f3d9;
   color: #272722;
   padding: 30px;
@@ -130,19 +140,18 @@ body {
   transition: left 0.5s ease-in-out;
   z-index: 1000;
 }
-.fullscreen-menu a {
+
+.fullscreen-menu p {
   color: #f8f3d9;
   text-decoration: none;
-  font-size: 25px;
-  margin: 15px 0;
+  font-size: 40px;
+  margin: 35px 0;
   transition: color 0.3s;
   padding-left: 20px;
   font-weight: 500;
-  padding: 10px;
-}
-.fullscreen-menu a:hover {
-  text-decoration: underline;
-  text-decoration-color: #f8f3d9;
+  padding: 15px;
+  letter-spacing: -1px;
+  font-family: "Garet";
 }
 
 .close-btn {
@@ -346,7 +355,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.9);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -369,4 +378,23 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+.ending {
+  line-height: 57px;
+}
+
+.flower {
+  height: 450px;
+  position: absolute;
+  bottom: 40px;
+  left: -50px;
+}
+.thankyou {
+  color: #272727;
+  font-family: "Garet", sans-serif;
+  letter-spacing: -3px;
+  font-size: 40px;
+  line-height: 45px;
+  margin-top: 10px;
+  padding: 0 10px;
 }
